--- a/search.html
+++ b/search.html
@@ -80,11 +80,11 @@
 									<ul class="dropdown-menu basic_filters_type">
 										<form>
 											<!-- <li><input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()"></li> -->
-											<li><input type="checkbox" name="cscid" id="cscid" value="Computer Science"> Computer Science</li>
+											<li><input type="checkbox" class='optcheck' name="cscid" id="cscid" value="Computer Science"> Computer Science</li>
 											 <li class="divider"></li>
-											<li><input type="checkbox" name="ecoid" id="ecoid" value="Economics"> Economics</li>
+											<li><input type="checkbox" class='optcheck' name="ecoid" id="ecoid" value="Economics"> Economics</li>
 											 <li class="divider"></li>
-											<li><input type="checkbox" name="staid" id="staid" value="Statistics"> Statistics</li>
+											<li><input type="checkbox" class='optcheck' name="staid" id="staid" value="Statistics"> Statistics</li>
 											 <li class="divider"></li>
 											<li>...</li>
 										</form>
@@ -97,15 +97,15 @@
     						<span class="caret"></span></button>
     						<ul class="dropdown-menu basic_filters_type">
 									<form>
-	      						<li><input type="checkbox" value="Breadth 1"> 1. Creative and Cultural Representations</li>
+	      						<li><input type="checkbox" class='optcheck' value="Breadth 1"> 1. Creative and Cultural Representations</li>
 	      						 <li class="divider"></li>
-	      						<li><input type="checkbox" value="Breadth 2"> 2. Thought, Belief, and Behaviour</li>
+	      						<li><input type="checkbox" class='optcheck' value="Breadth 2"> 2. Thought, Belief, and Behaviour</li>
 	      						 <li class="divider"></li>
-	      						<li><input type="checkbox" value="Breadth 3"> 3. Society and Its Institutions</li>
+	      						<li><input type="checkbox" class='optcheck' value="Breadth 3"> 3. Society and Its Institutions</li>
 	      						 <li class="divider"></li>
-	      						 <li><input type="checkbox" value="Breadth 4"> 4. Living Things and Their Environment</li>
+	      						 <li><input type="checkbox" class='optcheck' value="Breadth 4"> 4. Living Things and Their Environment</li>
 	      						 <li class="divider"></li>
-	      						<li><input type="checkbox" value="Breadth 5"> 5. The Physical and Mathematical Universes</li>
+	      						<li><input type="checkbox" class='optcheck' value="Breadth 5"> 5. The Physical and Mathematical Universes</li>
 									</form>
     						</ul>
   						</div>
@@ -116,9 +116,9 @@
     						<span class="caret"></span></button>
     						<ul class="dropdown-menu basic_filters_type">
 									<form>
-	      						<li><input type="checkbox" value="Fall"> Fall</li>
+	      						<li><input type="checkbox" class='optcheck' value="Fall"> Fall</li>
 	      						 <li class="divider"></li>
-	      						<li><input type="checkbox" value="Winter"> Winter</li>
+	      						<li><input type="checkbox" class='optcheck' value="Winter"> Winter</li>
 									</form>
 								</ul>
   						</div>
@@ -143,9 +143,9 @@
     												<span class="caret"></span></button>
     												<ul class="dropdown-menu basic_filters_type">
 															<form>
-																<li><input type="checkbox" value="Half"> Half</li>
+																<li><input type="checkbox" class='optcheck' value="Half"> Half</li>
       						 							<li class="divider"></li>
-      													<li><input type="checkbox" value="Full"> Full</li>
+      													<li><input type="checkbox" class='optcheck' value="Full"> Full</li>
 															</form>
 														</ul>
   												</div>
@@ -157,13 +157,13 @@
     												<span class="caret"></span></button>
     												<ul class="dropdown-menu basic_filters_type">
 															<form>
-      													<li><input type="checkbox" value="100"> 100</li>
+      													<li><input type="checkbox" class='optcheck' value="100"> 100</li>
       						 							<li class="divider"></li>
-      													<li><input type="checkbox" value="200"> 200</li>
+      													<li><input type="checkbox" class='optcheck' value="200"> 200</li>
       						 							<li class="divider"></li>
-      													<li><input type="checkbox" value="300"> 300</li>
+      													<li><input type="checkbox" class='optcheck' value="300"> 300</li>
       						 							<li class="divider"></li>
-      						 							<li><input type="checkbox" value="400"> 400</li>
+      						 							<li><input type="checkbox" class='optcheck' value="400"> 400</li>
 															</form>
     												</ul>
   												</div>
@@ -175,11 +175,11 @@
     												<span class="caret"></span></button>
     												<ul class="dropdown-menu basic_filters_type">
 															<form>
-      													<li><input type="checkbox" value="Research"> Research</li>
+      													<li><input type="checkbox" class='optcheck' value="Research"> Research</li>
       													<li class="divider"></li>
-      													<li><input type="checkbox" value="Online"> Online</li>
+      													<li><input type="checkbox" class='optcheck' value="Online"> Online</li>
       						 							<li class="divider"></li>
-      						 							<li><input type="checkbox" value="Pass/Fail"> Pass/Fail</li>
+      						 							<li><input type="checkbox" class='optcheck' value="Pass/Fail"> Pass/Fail</li>
 															</form>
 														</ul>
   												</div>
